# hs-nix-template

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .ghci  .gitlab-ci.yml  LICENSE  default.nix  hie.yaml  hls.sh  {{cookiecutter.project_name}}.cabal
{{cookiecutter.project_name}}/app/: Main.hs
{{cookiecutter.project_name}}/nix/: sources.json
{{cookiecutter.project_name}}/scripts/: dev.sh  devTest.sh  hoogle.sh  repl.sh  run.sh
{{cookiecutter.project_name}}/src/: Import.hs  {{cookiecutter.module}}.hs
{{cookiecutter.project_name}}/test/: Main.hs  {{cookiecutter.module}}Spec.hs
